@@ -9,7 +9,7 @@
    <TITLE>libstdc++-v3 HOWTO:  Chapter 24</TITLE>
 <LINK REL="home" HREF="http://sourceware.cygnus.com/libstdc++/docs/24_iterators/">
 <LINK REL=StyleSheet HREF="../lib3styles.css">
-<!-- $Id: howto.html,v 1.4 1999/12/15 16:57:06 pme Exp $ -->
+<!-- $Id: howto.html,v 1.1 2000/04/21 20:33:31 bkoz Exp $ -->
 </HEAD>
 <BODY>
 
@@ -25,7 +25,7 @@
 <H1>Contents</H1>
 <UL>
    <LI><A HREF="#1">They ain't pointers!</A>
-   <LI><A HREF="#2">Topic</A>
+   <LI><A HREF="#2">It ends <EM>where?</EM></A>
 </UL>
 
 <HR>
@@ -70,7 +70,7 @@
    </P>
 
 <HR>
-<H2><A NAME="2">Topic</A></H2>
+<H2><A NAME="2">It ends <EM>where?</EM></A></H2>
    <P>Blah.
    </P>
    <P>Return <A HREF="#top">to top of page</A> or
@@ -87,7 +87,7 @@
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:pme@sourceware.cygnus.com">Phil Edwards</A> or
 <A HREF="mailto:gdr@egcs.cygnus.com">Gabriel Dos Reis</A>.
-<BR> $Id: howto.html,v 1.4 1999/12/15 16:57:06 pme Exp $
+<BR> $Id: howto.html,v 1.1 2000/04/21 20:33:31 bkoz Exp $
 </EM></P>
 
 
