@@ -9,7 +9,7 @@
    <TITLE>How to automatically rebuild libgcc.a.</TITLE>
 <LINK REL="home" HREF="http://sourceware.cygnus.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: gccrebuild.html,v 1.2 2000/05/03 16:11:02 pme Exp $ -->
+<!-- $Id: gccrebuild.html,v 1.3 2000/06/19 22:20:15 bkoz Exp $ -->
 </HEAD>
 <BODY>
 
@@ -42,10 +42,10 @@
    as <EM>objdir</EM>; here it will be called <EM>GCCobjdir</EM>.
 </P>
 
-<P>This is a kludge, and will go away eventually, as more and more of
-   these copiler-level ABI switches get turned on by default.  (In a
-   sense, it has already gone away, as the library sources have been
-   merged into the compiler sources.)
+<P>This was a kludge, and after the library sources were merged into
+   the compiler sources, this was commented out.  If you must re-enable
+   it, you amy do so by uncommenting the GLIBCPP_ENABLE_RELIBGCC line in
+   configure.in and regenerating.
 </P>
 
 <HR>
@@ -118,7 +118,7 @@
 
 <HR>
 <P CLASS="fineprint"><EM>
-$Id: gccrebuild.html,v 1.2 2000/05/03 16:11:02 pme Exp $
+$Id: gccrebuild.html,v 1.3 2000/06/19 22:20:15 bkoz Exp $
 </EM></P>
 
 
